tests/negative/preprocessor_error.c
#error deliberate preprocessing failure
int main(void) { return 0; }
